# MeteoFlow

./: .gitignore  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  __main__.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/: elt.py  export.py  extract.py  pipeline.py
src/cities_of_eternal_spring_in_europe/: __init__.py  cli.py
src/meteoflow/: __main__.py  cli.py  pipeline.py
tests/: __init__.py  test_cities_of_eternal_spring_in_europe.py  tests.py
viz/: European_Weather_Report.pbix  weather_analysis.ipynb
