[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "MeteoFlow"
version = "0.1.0"
description = "An ELT pipeline that extracts historical daily temperature data from Open-Meteo, loads it into DuckDB, and performs SQL-based transformations for climate analysis."
readme = "README.rst"
authors = [
  {name = "Philip Ma", email = "zz.pma2000@gmail.com"}
  ,{name = "Ellah Benerado", email = "ebenerado@gmail.com"}
]
maintainers = [
  {name = "Philip Ma", email = "zz.pma2000@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  "typer",
  "duckdb",
  "pandas",
  "requests"
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/zzpma/MeteoFlow/issues"
changelog = "https://github.com/zzpma/MeteoFlow/blob/master/changelog.md"
homepage = "https://github.com/zzpma/MeteoFlow"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

